Remove g1c1 examples... g1c1 uses high cpu